Version 3.1.0: TypeVisitor, TypeVariable, & TypeParameter binding